# loom-engineering-workspace

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-COMMERCIAL.md  LOOM.code-workspace  README.en.md  README.md  README_CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  settings.gradle.kts  task-6-report.md  workspace.json
.githooks/: pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
apps/loom-platform/openclaw_new_launcher/src-tauri/: Cargo.toml  tauri.conf.json  tauri.protected.conf.json
apps/loom-platform/openclaw_new_launcher/src-tauri/installer/: stop-owned-install-processes.ps1  update-handoff.ps1
apps/loom-platform/openclaw_new_launcher/src-tauri/src/: license.rs  main.rs
docs/: DEVELOPMENT_WIKI.md  LOOM_ARCHITECTURE_MINDMAP.md  LOOM_CORE_ARCHITECTURE.md  LOOM_FRONTEND_BACKEND_SEPARATION_CONSTRAINTS.md  LOOM_HANDOFF_2026-06-28.md  LOOM_PRODUCT_DELIVERY_EXPECTATION.md  LOOM_WHITE_LABEL_SOP.md  PROJECT_DOCUMENTATION.md  RUNTIME_ADAPTER_DESIGN.md
examples/: openclaw-release-manifest.example.json
license_server/: deploy.sh  deploy_member_update.py  openclaw-license.env.example  openclaw-license.service  server.py
openclaw_new_launcher/: package.json  test_license.py
schemas/: openclaw-release-manifest.schema.json
scripts/: bootstrap.ps1  build-luming-skills-library.ps1  build-online-exe-installer.ps1  clean-workspace.ps1  download-android-platform-tools.ps1  download-webview2-runtime.ps1  new-feature.ps1  smoke-bridge.ps1  smoke-test-tauri-nsis.ps1  status.ps1  sync.ps1  (+7 more)
(+1170 files in other folders)
