[package]
name = "app"
version = "2.3.11"
description = "LOOM AI Matrix Acquisition Workbench"
authors = ["Yu Hang (He Ang)"]
license = "AGPL-3.0-only"
repository = "https://github.com/rfdiosuao/loom-engineering-workspace"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
reqwest = "0.12"
flate2 = "1"
tar = "0.4"
base64 = "0.22"
chrono = "0.4"
ed25519-dalek = "2"
sha2 = "0.10"
windows-sys = { version = "0.60", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
